Added HashMap for Interactables in Scene